--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -29,6 +29,51 @@ a:active {color:black; text-decoration: none;}
 a:hover {color:black; text-decoration: none;}
 
 p, h2, h3{line-height: 2em}
+ul{ list-style: none;}
+
+
+/* Navigation Bar */
+nav{font-family: 'Noto Sans KR', sans-serif;}
+
+.navbar-nav{width:100%; margin:0 0; text-align: center;}
+.nav-item{padding-left: 2rem; padding-right: 2rem; font-size: 20px; font-weight: 700;}
+.navbar-light .navbar-nav .nav-link {
+  color: rgba(0, 0, 0, 0.8);
+}
+.nav-sub{
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  display: none;
+  /*float: left;*/
+  padding: 0;
+  margin: 0;
+  font-size: 1rem;
+  list-style: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  background-clip: padding-box;
+  border-top: 1px solid rgba(0, 0, 0, 0.5);
+  border-radius: 0.25rem;
+  text-align: center;
+}
+.nav-sub-list{
+  display: inline-flex;
+  margin-left:auto;
+  margin-right:auto;
+}
+.nav-sub ul{float:left;}
+.nav-sub0{
+  float:left;
+  padding: 0.5rem 0.5rem;
+  margin: auto;
+
+  text-align: center;
+}
+.nav-sub-text{  color:black;}
+.portfolio-item { margin-bottom: 30px;}
+.dropdown-item{ font-weight: 400; }
 
 /* side bar 옆 content */
 .main-content{
@@ -82,23 +127,10 @@ p, h2, h3{line-height: 2em}
   background-size: cover;
 }
 
-.portfolio-item {
-  margin-bottom: 30px;
-}
-.dropdown-item{
-  font-weight: 400;
-}
-
-nav{font-family: 'Noto Sans KR', sans-serif;}
-
-.nav-item{
-  font-weight: 700;
-}
 
 /* Footer */
 footer{  color:#727272;  font-size: 13px;}
 footer li{  display:inline; color: white;  padding:10px;}
-footer ul{ list-style: none;}
 footer span{color:#727272; padding:5px}
 
 .breadcrumb {
