--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -29,14 +29,14 @@ a:active {color:black; text-decoration: none;}
 a:hover {color:black; text-decoration: none;}
 
 p, h2, h3{line-height: 2em}
-ul{ list-style: none;}
+ul{ padding:0; list-style: none;}
 
 
 /* Navigation Bar */
 nav{font-family: 'Noto Sans KR', sans-serif;}
 
-.navbar-nav{width:100%; margin:0 0; text-align: center;}
-.nav-item{padding-left: 2rem; padding-right: 2rem; font-size: 20px; font-weight: 700;}
+.navbar-nav{width:100%; margin: 0 auto; text-align: center;}
+.nav-item{margin:0 auto; font-size: 20px; font-weight: 700;}
 .navbar-light .navbar-nav .nav-link {
   color: rgba(0, 0, 0, 0.8);
 }
@@ -59,29 +59,40 @@ nav{font-family: 'Noto Sans KR', sans-serif;}
   text-align: center;
 }
 .nav-sub-list{
-  display: inline-flex;
-  margin-left:auto;
-  margin-right:auto;
+  margin:0 auto;
 }
-.nav-sub ul{float:left;}
-.nav-sub0{
-  float:left;
-  padding: 0.5rem 0.5rem;
-  margin: auto;
+.nav-sub-list.container{
+  padding-left: 17.6rem;
+  align-items: flex-start;
+}
+.collapse.container{
+  padding:0;
+}
 
+.nav-sub0{
+  margin: 0.5rem auto;
+  padding:0.5rem 0;
+  width:25%;
+  height:100%;
   text-align: center;
+  border-right: 1px groove white;
 }
-.nav-sub-text{  color:black;}
+.nav-sub0.last{border:none}
+.nav-sub0 ul li{padding:.1rem 0;}
+.nav-sub0 ul li a:hover{color:white; font-weight: 400;}
+.nav-sub-text{ 
+  font-size: 15px; color:white;
+  font-weight:100;
+}
+
+
 .portfolio-item { margin-bottom: 30px;}
-.dropdown-item{ font-weight: 400; }
 
 /* side bar 옆 content */
 .main-content{
   width:100%;
   padding-top:30px;
   padding-bottom:30px;
-  padding-right:15px;
-  padding-left: 15px;
   margin-right: auto;
   margin-left:auto;
   max-width: 1400px;
@@ -90,18 +101,27 @@ nav{font-family: 'Noto Sans KR', sans-serif;}
 /* 각 메뉴의 top-img */
 .top-area{
   position:relative; 
+  text-align: center;
   background: no-repeat center center scroll;
   height:33vh;
   min-height: 300px;
   background-size:cover;
 }
-.top-text{
-  text-align: right;
+.top-area h1{
+  font-family: 'Noto Sans KR', sans-serif;
+  position: absolute;
+  display:inline-flex;
+  top:40%;
+  right:20%;
   color:white;
-  height:33vh;
-  padding-top: 15vh;
-  margin:auto;
-  padding-right: 390px;
+}
+.top-area p{
+  position: absolute;
+  display:inline-flex;
+  top:60%;
+  right:20%;
+  color:white;
+  font-weight: 100;
 }
 
 .wrap {
@@ -198,3 +218,10 @@ footer span{color:#727272; padding:5px}
   font-weight:normal;overflow:hidden;padding:10px 8px;word-break:normal;}
 .work-tb .work-tb-cm{text-align:center;vertical-align:middle}
 .work-tb .work-tb-lm{text-align:left;vertical-align:middle}
+
+
+@media (min-width: 1200px){ 
+  .main-content .container {
+    max-width: 1140px;
+}
+}
