--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -8,12 +8,7 @@
   src: url('/font/NanumBarunGothic.eot');
   src: url('/font/NanumBarunGothic.eot') format('embedded-opentype'), url('/font/NanumBarunGothic.woff') format('woff');}
   
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
-
-
-
+@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Russo+One&family=Noto+Sans+KR:wght@400;700&display=swap');
 
 /* 웹사이트의 위 - 아래 순서? 
 tag > id > class 순서 */
@@ -120,7 +115,7 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
   position:relative; 
   text-align: center;
   background: no-repeat center center scroll;
-  height:30vh;
+  height:40vh;
   min-height: 280px;
   background-size:cover;
 }
@@ -281,18 +276,18 @@ footer span{color:#727272; padding:5px}
   font-weight: 700;
   font-size: 20px;
   padding:25px;
-  background-color: #e5eafb ;
+  background-color: #00498c; color:white;
   width:inherit;
   min-height:80px;
 }
 .list-group-item{ padding-left:30px;}
 
-/* Work-list-tb */
+/* Work-list table */
 .work-list{margin:0 auto;}
 .work-tb  {width:100%; border-collapse:collapse;border-spacing:0; margin:0 auto;}
 .work-tb td{border-color:grey;border-style:solid;border-width:1px;font-size:14px;
   overflow:hidden;padding:10px 8px; text-align:center;vertical-align:middle}
-.work-tb th{ background-color: #00498c; color:white; text-align:center;vertical-align:middle;
+.work-tb th{ background-color: #4169e1; color:white; text-align:center;vertical-align:middle;
   border-color:grey;border-style:solid;border-width:1px;font-size:15px;
   font-weight:normal;overflow:hidden;padding:10px 8px;}
 .work-tb .work-tb-cm{text-align:center;vertical-align:middle}
@@ -352,18 +347,27 @@ footer span{color:#727272; padding:5px}
 /* Business Information */
 
 .business-intro{
-  padding:15px 20px;
-
-  font-weight: 400;
-  font-size:20px;
-  margin:15px auto; 
+  position:relative;
+  padding:15px 20px;  margin:15px auto;
+  font-weight: 400;  font-size:20px; text-align: center;
+}
+.business-intro p:before{
+  content:'“';  position:relative;
+  top:25px; 
+  font-size:90px;  font-weight: 500; font-family: "Black Han Sans", sans-serif;
+  color:#3cb371; opacity:0.4;
+}
+.business-intro p:after{
+  content:'”';  position:relative;
+  top:60px;
+  font-size:90px;  font-weight: 500; font-family: "Black Han Sans", sans-serif;
+  color:#3cb371; opacity:0.4;
 }
 
 .business-content{
   margin:0 auto;
   width:100%;
   font-family: 'NanumBarunGothic', sans-serif; 
-
 }
 
 .business-content img{display:block; margin:auto;}
@@ -469,6 +473,7 @@ footer span{color:#727272; padding:5px}
 #bus4 .circle-list{border-spacing: 50px;}
 #bus4 .circle-list li:before{left:-40px}
 
+/* Sub menu button */
 /*
 .sub-menu-btn a:hover{color:white; background:#4169e1}*/
 
@@ -492,10 +497,14 @@ footer span{color:#727272; padding:5px}
   font-weight: 400;
 }
 .sub-menu-btn div.active{
-  background: #4169e1;
+  background: #00498c;
   color:white;
 }
 .sub-menu-btn p{margin:0;}
+
+
+/* Contact send btn*/
+#contactForm button {position:absolute; left:50%; text-align: center;}
 
 
 /* 이거 사용하나? */
