--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -100,6 +100,7 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 }
 
 
+
 /* side bar 옆 content */
 .main-content{
   width:100%;
@@ -152,15 +153,15 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 
 }
 
-/* Index.html - Business Card */
-.card{
-  cursor: pointer;
-  border-radius:0;
-  
-}
+
+/* Index.html - Business Card (portfolio)*/
+.main-business h2{text-align:center; font-weight: 500; font-size: 48px; letter-spacing: -3px; margin-top:2rem; margin-bottom:2rem;}
+.card{ cursor: pointer; border-radius:0; }
+
+.portfolio-item{height:450px;}
 .card-img{
   width:100%;
-  height:190px;
+  height:220px;
   border-radius:0;
   background: no-repeat center center scroll;
   background-size:cover;
@@ -176,8 +177,7 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 .card-title{text-align: center;}
 .card-title a{ color:black;}
 .card-text{font-size:15px; text-align:center;}
-.col-lg-3.portfolio-item{padding-right:8px; padding-left:8px;}
-
+.col-lg.portfolio-item{padding-right:6px; padding-left:6px;}
 
 
 .wrap {  margin:0;}
