--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -20,11 +20,13 @@ tag > id > class 순서 */
 .color-Bmain{color:#4169e1 !important;}
 .color-G{color:#3cb371 !important;}
 .color-R{color:#df304d !important;}
+.color-grey{color:#333333 !important;}
 .bg-grey{background-color:#f0f0f0; padding:7px 15px;}
 
 
 body { padding-top:0;  font-family: 'Noto Sans KR', sans-serif; word-break: keep-all;}
 header{position:relative;}
+.container{padding:0}
 
 /* 하이퍼링크 색깔/밑줄 */
 a { color: #727272; text-decoration: none;}
@@ -168,7 +170,7 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 .card-bg{position:absolute; z-index:10; width:100%; height:450px; opacity:0.0; background-color: #00A4D1; transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1) 0ms; }
 .card-bg:hover{opacity:0.45;     
   transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1) 0ms;
-  background-color: #00A4D1;}
+  background-color: #0096BF;}
 
 .card-img{ width:100%; height:260px; border-radius:0; background: no-repeat center center scroll; background-size:cover;
   transform: scale(1);
@@ -180,9 +182,9 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
   transition: transform 500ms cubic-bezier(0.165, 0.84, 0.44, 1) 0ms;
 }
 .card-head{overflow:hidden;}
-.card-title{text-align: center; font-weight: 500; letter-spacing:-2px;}
+.card-title{text-align: center; font-weight: 600; letter-spacing:-2px;}
 .card-title a{ color:black;}
-.card-text{margin-top: 1.5rem; font-size:15px; letter-spacing:-1px; text-align:center;}
+.card-text{margin-top: 1.5rem; font-size:17px; letter-spacing:-1px; color:#333333; text-align:center;}
 .portfolio{margin-top:70px; }
 
 
@@ -234,7 +236,7 @@ footer span{color:#727272; padding:5px}
   border-bottom: 3px solid #bbbfcc;
 }
 
-.title-bar h1{color:#333333;}
+.title-bar h1{color:#333333; letter-spacing: -2px; font-weight: 500;}
 
 /*
 .breadcrumb-item::before {
@@ -292,8 +294,11 @@ footer span{color:#727272; padding:5px}
 
 
 /* Greet.html */
-#greet .img-feature{width:20%; height:600px; background: no-repeat center center scroll;}
-
+#greet .img-feature{width:27%; height:600px; background:no-repeat 60% bottom scroll; background-size:cover; margin:auto;}
+#greet-content{width:67%; margin:10px auto;}
+#greet h2 {font-size:24px; font-weight: 500; color:#333333; text-align: center; margin:20px auto; letter-spacing: -2px;}
+#greet h3{letter-spacing: -2px; margin-top:25px; font-size:22px; line-height: 2.5rem;}
+#greet p{ text-align:justify; letter-spacing: -1px; font-size:18px; }
 
 /* Work-list table */
 .work-list{margin:0 auto;}
@@ -366,17 +371,17 @@ footer span{color:#727272; padding:5px}
   padding:15px 20px;  margin:15px auto;
   font-weight: 400;  font-size:24px; text-align: center; letter-spacing: -2px;
 }
-.business-intro p:before{
+.intro-effect:before{
   content:'“';  position:relative;
   top:25px; 
   font-size:90px;  font-weight: 500; font-family: "Black Han Sans", sans-serif;
-  color:#3cb371; opacity:0.4;
+  color:#0096BF; opacity:0.4;
 }
-.business-intro p:after{
+.intro-effect:after{
   content:'”';  position:relative;
   top:60px;
   font-size:90px;  font-weight: 500; font-family: "Black Han Sans", sans-serif;
-  color:#3cb371; opacity:0.4;
+  color:#0096BF; opacity:0.4;
 }
 
 .business-content{
