--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -303,10 +303,10 @@ footer span{color:#727272; padding:5px}
 /* Work-list table */
 .work-list{margin:0 auto;}
 .work-tb  {width:100%; border-collapse:collapse;border-spacing:0; margin:10px auto;}
-.work-tb td{border-color:grey;border-style:solid;border-width:1px;font-size:15px;
+.work-tb td{border-color:#bbbfcc;border-style:solid;border-width:1px;font-size:15px;
   overflow:hidden;padding:10px 8px; text-align:center;vertical-align:middle}
-.work-tb th{ background-color: #4169e1; color:white; text-align:center;vertical-align:middle;
-  border-color:grey;border-style:solid;border-width:1px;font-size:18px;
+.work-tb th{ background-color: #00A4D1; color:white; text-align:center;vertical-align:middle;
+  border-color:#bbbfcc;border-style:solid;border-width:1px;font-size:18px;
   font-weight:normal;overflow:hidden;padding:10px 8px;}
 .work-tb .work-tb-cm{text-align:center;vertical-align:middle}
 .work-tb .work-tb-lm{text-align:left;vertical-align:middle}
@@ -370,7 +370,7 @@ footer span{color:#727272; padding:5px}
   position:relative;
   padding:15px 20px;  margin:15px auto;
 }
-.business-intro p{line-height: 1.5rem;  font-weight: 300;  font-size:18px; text-align: center; letter-spacing: -2px; color:#6c757d}
+.business-intro p{line-height: 1.5rem;  font-weight: 300;  font-size:18px; text-align: center; letter-spacing: -2px; color:#6c757d; margin:0;}
 .intro-effect:before{
   content:'“';  position:relative;
   top:25px; 
@@ -498,30 +498,32 @@ footer span{color:#727272; padding:5px}
 /*
 .sub-menu-btn a:hover{color:white; background:#4169e1}*/
 
-.sub-menu-btn a:hover{font-weight: 700;}
+
+
 .sub-menu-btn div{
   float:left;
   text-align:center;
   padding-top:15px;
   padding-bottom:15px;
-
-  margin:15px 0.1%;
+  margin:15px 0;
   margin-bottom:30px;
-  border:1px solid #6c757d;
+  border-bottom:2px solid #003E78;
 }
 .sub-menu-btn.col3 div{ width:33%;}
 .sub-menu-btn.col2 div{width:49.5%;}
 .sub-menu-btn a{
-  color:black;
+  color:grey;
   margin:0 auto;
-  font-size:18px;
-  font-weight: 400;
+  font-size:20px;
+  font-weight: 500;
 }
 .sub-menu-btn div.active{
-  background: #003E78;
-  color:white;
+  border:2px solid #003E78;
+  border-bottom:none;
+  color: #003E78;
 }
 .sub-menu-btn p{margin:0;}
+.sub-menu-btn a:hover{font-weight: 700;} /* 이거 왜 적용 안됨? */
 
 /* Contact send btn*/
 #contactForm button {margin:0 auto; text-align: center;}
