--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -164,11 +164,14 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 
 .card{ cursor: pointer; border-radius:0; border:1px solid rgba(0,0,0,0.2); overflow: hidden; }
 .portfolio-item{height:450px; padding-right:4px; padding-left:4px;}
-
-.card-bg{position:absolute; z-index:10; width:100%; height:450px; opacity:0.0; background-color: black; transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1) 0ms; }
-.card-bg:hover{opacity:0.45;     
+.portfolio-item a:hover #card-img{  transform: scale(1.06);
+  transition: transform 500ms cubic-bezier(0.165, 0.84, 0.44, 1) 0ms;}
+.portolio-item a:hover #card-bg{opacity:0.45;     
   transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1) 0ms;
-  background-color: black;}
+  background-color: black; }
+
+.card-bg{position:absolute; width:100%; height:450px; opacity:0.0; background-color: black; transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1) 0ms; }
+.card-bg:hover{}
 
 .card-img{ width:100%; height:260px; border-radius:0; background: no-repeat center center scroll; background-size:cover;
   transform: scale(1);
@@ -176,15 +179,16 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 }
 
 .card-img:hover{   
-  transform: scale(1.06);
-  transition: transform 500ms cubic-bezier(0.165, 0.84, 0.44, 1) 0ms;
+
 }
+
+
+
 .card-head{overflow:hidden;}
 .card-title{text-align: center; font-weight: 600; letter-spacing:-2px;}
 .card-title a{ color:black;}
 .card-text{margin-top: 1.5rem; font-size:17px; letter-spacing:-1px; color:#333333; text-align:center;}
 .portfolio{margin-top:90px; }
-
 
 
 .wrap {  margin:0;}
