--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -164,22 +164,18 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 
 .card{ cursor: pointer; border-radius:0; border:1px solid rgba(0,0,0,0.2); overflow: hidden; }
 .portfolio-item{height:450px; padding-right:4px; padding-left:4px;}
-.portfolio-item a:hover #card-img{  transform: scale(1.06);
+.portfolio-item:hover .card-img{  transform: scale(1.06);
   transition: transform 500ms cubic-bezier(0.165, 0.84, 0.44, 1) 0ms;}
-.portolio-item a:hover #card-bg{opacity:0.45;     
+.portfolio-item:hover .card-bg{ 
+  opacity:0.45;     
   transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1) 0ms;
   background-color: black; }
 
-.card-bg{position:absolute; width:100%; height:450px; opacity:0.0; background-color: black; transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1) 0ms; }
-.card-bg:hover{}
+.card-bg{position:absolute; z-index:20; width:100%; height:450px; opacity:0.0; background-color: black; transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1) 0ms; }
 
 .card-img{ width:100%; height:260px; border-radius:0; background: no-repeat center center scroll; background-size:cover;
   transform: scale(1);
   transition: transform 700ms cubic-bezier(0.165, 0.84, 0.44, 1) 0ms;
-}
-
-.card-img:hover{   
-
 }
 
 
