--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -63,8 +63,8 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
   margin:0 auto;
 }
 .nav-sub-list.container{
-  padding-left: 17.6rem;
-  padding-right: 10.5rem;
+  padding-left: 16.6rem;
+  padding-right: 9.5rem;
   align-items: flex-start;
 }
 .collapse.container{
@@ -296,18 +296,20 @@ footer span{color:#727272; padding:5px}
 #greet-content{width:67%; margin:10px auto;}
 #greet h2 {font-size:24px; font-weight: 500; color:#333333; text-align: center; margin:20px auto; letter-spacing: -2px;}
 #greet h3{letter-spacing: -2px; margin-top:2.5rem; font-size:22px; line-height: 2.5rem;}
-#greet p{ text-align:justify; letter-spacing: -1px; font-size:16px; }
+#greet p{ text-align:justify; letter-spacing: -1px; font-size:16px;}
 
 /* Work-list table */
 .work-list{margin:0 auto;}
 .work-tb  {width:100%; border-collapse:collapse;border-spacing:0; margin:10px auto;}
 .work-tb td{border-color:#bbbfcc;border-style:solid;border-width:1px;font-size:15px;
   overflow:hidden;padding:10px 8px; text-align:center;vertical-align:middle}
-.work-tb th{ background-color: #00A4D1; color:white; text-align:center;vertical-align:middle;
-  border-color:#bbbfcc;border-style:solid;border-width:1px;font-size:18px;
-  font-weight:normal;overflow:hidden;padding:10px 8px; word-break:break-all;}
+.work-tb th{ background-color: rgba(0, 150, 191, 0.8); color:white; text-align:center;vertical-align:middle;
+  border-color:#bbbfcc;border-style:solid;border-width:1px; font-size:18px;
+  font-weight:normal;overflow:hidden;padding:15px 4px; min-width:50%;}
 .work-tb .work-tb-cm{text-align:center;vertical-align:middle}
 .work-tb .work-tb-lm{text-align:left;vertical-align:middle}
+.work-tb th span{font-size: 10px;}
+
 
 /* Personal-Area */
 .personal-box{
@@ -368,7 +370,7 @@ footer span{color:#727272; padding:5px}
   position:relative;
   padding:15px 20px;  margin:15px auto;
 }
-.business-intro p{line-height: 1.5rem;  font-weight: 300;  font-size:18px; text-align: center; letter-spacing: -2px; color:#6c757d; margin:0;}
+.business-intro p{line-height: 1.5rem;  font-weight: 300;  font-size:20px; text-align: center; letter-spacing: -2px; color:#6c757d; margin:0;}
 .intro-effect:before{
   content:'“';  position:relative;
   top:25px; 
@@ -397,7 +399,7 @@ footer span{color:#727272; padding:5px}
   display:inline-block;  
   width:10px;
   height:18px;
-  background: #00A4D1;
+  background: #0096BF;
 }
 .business-content .sub-tit{letter-spacing: -1px;}
 
