--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -155,9 +155,9 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 
 
 /* Index.html - Business Card (portfolio)*/
-.background-custom{position:absolute; z-index:-1; bottom:-135px; width:100%; height: 35vh; margin:0; background-position:top; background-repeat: no-repeat;background-size:cover}
+.background-custom{position:absolute; z-index:-1; top:690px; width:100%; height: 35vh; margin:0; background-position:top; background-repeat: no-repeat;background-size:cover}
 
-.main-business{position:relative; top:0; margin-top:28px;}
+.main-business{position:relative; top:0; margin-top:10px;}
 .main-business h2{display: inline-block; text-align:left; z-index:2; font-weight: 500; font-size: 56px; letter-spacing: -3px; margin-top:0; margin-bottom:2rem; 
   background: url('img/line.png') no-repeat center bottom;}
 .main-business h3{display:inline-block; margin-left: 1.5rem; text-align:left; font-weight: 500; font-size:22px; letter-spacing: -1px; color:grey; }
@@ -179,7 +179,6 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 }
 
 
-
 .card-head{overflow:hidden;}
 .card-title{text-align: center; font-weight: 600; letter-spacing:-2px;}
 .card-title a{ color:black;}
@@ -187,7 +186,7 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 .portfolio{margin-top:90px; }
 
 
-.wrap {  margin:0;}
+.wrap { margin:0;}
 
 .content{
   margin-top: 20px;
@@ -198,8 +197,7 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 }
 
 .carousel-item {
-  height: 65vh;
-  min-height: 300px;
+  height: 580px;
   background: no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -289,6 +287,20 @@ footer span{color:#727272; padding:5px}
 .side-menu:hover{color:white; }
 
 .list-group-item{ padding-left:30px;}
+.list-group-header{
+  position:relative;
+  display:block;
+  padding:.75rem 1rem;
+  border:1px solid rgba(0, 0, 0, .125);
+  border-bottom: 2px outset rgba(0, 0, 0, .125); 
+  font-size:20px; font-weight: 500; color:#333333; letter-spacing: -1px;
+}
+.list-group-header:before{
+  content:'>';  position:relative; 
+  left: -7px;
+  font-size:25px;  font-weight: 700;
+  color:#003E78; opacity:0.8;
+}
 
 
 /* Greet.html */
@@ -467,10 +479,6 @@ footer span{color:#727272; padding:5px}
   margin-top: 10px;
 }
 
-.carousel-item {
-  height:77vh;
-}
-
 
 /* Business 3 - table */
 .normal-tb  {font-family: 'Noto Sans KR', sans-serif; width:100%; border-collapse:collapse;border-spacing:0; margin:10px auto; margin-bottom:40px; }
@@ -535,6 +543,7 @@ footer span{color:#727272; padding:5px}
   border-bottom:2px solid #003E78;
 }
 .sub-menu-btn.col3 div{ width:33%;}
+.sub-menu-btn.col4 div{ width:25%;}
 .sub-menu-btn.col2 div{width:49.5%;}
 .sub-menu-btn a{
   color:grey;
