--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -26,7 +26,7 @@ tag > id > class 순서 */
 
 body { padding-top:0;  font-family: 'Noto Sans KR', sans-serif; word-break: keep-all;}
 header{position:relative;}
-.container{padding:0}
+
 
 /* 하이퍼링크 색깔/밑줄 */
 a { color: #727272; text-decoration: none;}
@@ -155,17 +155,19 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 
 
 /* Index.html - Business Card (portfolio)*/
-.background-custom{position:absolute; z-index:-1; top:690px; width:100%; height: 35vh; margin:0; background-position:top; background-repeat: no-repeat;background-size:cover}
+.background-custom{
+  background-image: url('../img/4.png');
+  position:relative; z-index:-1; top:10px; width:100%; height: 300px; margin:0; background-position:center top; background-repeat: no-repeat; background-size:cover;}
 
-.main-business{position:relative; top:0; margin-top:10px;}
-.main-business h2{display: inline-block; text-align:left; z-index:2; font-weight: 500; font-size: 56px; letter-spacing: -3px; margin-top:0; margin-bottom:2rem; 
-  background: url('img/line.png') no-repeat center bottom;}
-.main-business h3{display:inline-block; margin-left: 1.5rem; text-align:left; font-weight: 500; font-size:22px; letter-spacing: -1px; color:grey; }
+.main-business{position:relative; top:-300px;}
+.main-business h2{display: inline-block; text-align:left; font-weight: 500; font-size: 56px; letter-spacing: -3px; margin:0;}
+.main-business h3{display:inline-block; margin-left: 1.5rem; text-align:left; font-weight: 500; font-size:22px; letter-spacing: -2px; color: #727272; }
 
 .card{ cursor: pointer; border-radius:0; border:1px solid rgba(0,0,0,0.2); overflow: hidden; }
+.portfolio{margin-top:70px; }
 .portfolio-item{height:450px; padding-right:4px; padding-left:4px;}
-.portfolio-item:hover .card-img{  transform: scale(1.06);
-  transition: transform 500ms cubic-bezier(0.165, 0.84, 0.44, 1) 0ms;}
+.portfolio-item:hover .card-img{  transform: scale(1.05);
+  transition: transform 700ms cubic-bezier(0.165, 0.84, 0.44, 1) 0ms;}
 .portfolio-item:hover .card-bg{ 
   opacity:0.45;     
   transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1) 0ms;
@@ -183,7 +185,6 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 .card-title{text-align: center; font-weight: 600; letter-spacing:-2px;}
 .card-title a{ color:black;}
 .card-text{margin-top: 1.5rem; font-size:17px; letter-spacing:-1px; color:#333333; text-align:center;}
-.portfolio{margin-top:90px; }
 
 
 .wrap { margin:0;}
@@ -197,13 +198,15 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 }
 
 .carousel-item {
-  height: 580px;
+  max-height:700px;
+  background-image: url('../img/20200929_155648_0001.png');
   background: no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
+video{width:100%; max-height:700px;}
 
 
 /* Contact Content*/
@@ -333,48 +336,6 @@ footer span{color:#727272; padding:5px}
   overflow:auto;
 }
 .personal-content{padding-left:20px; padding-right: 20px; padding-top:30px}
-
-@media (min-width: 992px){ 
-  .main-content .container {
-    max-width: 800px;
-  }
-  .navbar .container{
-    max-width:900px;
-  }
-}
-@media (min-width: 1200px){ 
-  .main-content .container {
-    max-width: 990px;
-  }
-  .navbar .container{
-    max-width:1400px;
-  }
-}
-@media (min-width: 1400px){ 
-  .main-content .container {
-    max-width: 1140px;
-  }
-  .navbar .container{
-    max-width:1400px;
-  }
-}
-
-
-
-/*
-@media (min-width: 992px 768 576){ 
-  .main-content .container {
-    max-width: 1140px;
-  }
-}*/
-
-@media (max-width: 992px){ 
-  .nav-sub-list.container {
-    padding:0;
-    margin:0 auto;
-  }
-}
-
 
 
 /* Business Information */
@@ -573,3 +534,41 @@ footer span{color:#727272; padding:5px}
   
   justify-content: space-between;
 }
+
+
+@media (min-width: 992px){ 
+  .main-content .container {
+    max-width: 800px;
+  }
+  .navbar .container{
+    max-width:900px;
+  }
+  .navbar .navbar-nav .nav-link { font-size:1.2rem;}
+}
+@media (min-width: 1200px){ 
+  .main-content .container {
+    max-width: 990px;
+  }
+  .navbar .container{
+    max-width:1400px;
+  }
+}
+@media (min-width: 1400px){ 
+  .main-content .container {
+    max-width: 1140px;
+  }
+  .navbar .container{
+    max-width:1400px;
+  }
+}
+
+
+
+@media (max-width: 992px){ 
+  .nav-sub-list.container {
+    padding:0;
+    margin:0 auto;
+  }
+}
+
+
