--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -40,7 +40,7 @@ ul{ padding:0; list-style: none;}
 /* Navigation Bar */
 nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 
-.navbar-nav{width:100%; margin: 0 auto; text-align: center;}
+.navbar-nav{width:100%; margin: 0 auto; text-align: center; flex-direction: row;}
 .nav-item{margin:0 auto; font-size: 22px;}
 
 .nav-sub{
@@ -52,7 +52,6 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
   display: none;
   padding: 0;
   margin: 0;
-  font-size: 1rem;
   list-style: none;
   background-color: rgba(255, 255, 255, 0.8);
   background-clip: padding-box;
@@ -157,9 +156,9 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 /* Index.html - Business Card (portfolio)*/
 .background-custom{
   background-image: url('../img/4.png');
-  position:relative; z-index:-1; top:10px; width:100%; height: 300px; margin:0; background-position:center top; background-repeat: no-repeat; background-size:cover;}
+  position:relative; z-index:-1; top:10px; height: 300px; margin:0; background-position:center top; background-repeat: no-repeat; background-size:100%;}
 
-.main-business{position:relative; top:-300px;}
+.main-business{position:relative; top:-305px;}
 .main-business h2{display: inline-block; text-align:left; font-weight: 500; font-size: 56px; letter-spacing: -3px; margin:0;}
 .main-business h3{display:inline-block; margin-left: 1.5rem; text-align:left; font-weight: 500; font-size:22px; letter-spacing: -2px; color: #727272; }
 
@@ -535,15 +534,15 @@ footer span{color:#727272; padding:5px}
   justify-content: space-between;
 }
 
-
+/* min-width:100 - 최소 너비가 100일때까지 ~~ 한다. 너비가 100보다 클때 적용*/
 @media (min-width: 992px){ 
   .main-content .container {
-    max-width: 800px;
+    max-width: 810px;
   }
   .navbar .container{
     max-width:900px;
   }
-  .navbar .navbar-nav .nav-link { font-size:1.2rem;}
+
 }
 @media (min-width: 1200px){ 
   .main-content .container {
@@ -553,6 +552,7 @@ footer span{color:#727272; padding:5px}
     max-width:1400px;
   }
 }
+
 @media (min-width: 1400px){ 
   .main-content .container {
     max-width: 1140px;
@@ -560,15 +560,34 @@ footer span{color:#727272; padding:5px}
   .navbar .container{
     max-width:1400px;
   }
+
 }
 
-
+@media (max-width: 1200px){
+  .main-business h2{font-size: 46px;}
+  .main-business h3{font-size: 16px; letter-spacing: -1px;}
+}
 
 @media (max-width: 992px){ 
   .nav-sub-list.container {
     padding:0;
     margin:0 auto;
   }
+  .top-util{display:none}
+  .nav-link{font-size:1.2rem}
+  .main-business h2{font-size: 36px;}
+  .main-business h3{font-size: 14px;  letter-spacing: -1px;}
+}
+@media (max-width: 768px){
+  .main-business h2{font-size: 32px;}
+  .main-business h3{font-size: 12px;}
+  .portfolio {margin-top:30px;}
+}
+@media (max-width: 576px){
+  .main-business h2{font-size: 26px; margin-left:3rem;} 
+  .main-business h3{font-size: 9px; letter-spacing: -1px; margin-left:.5rem;}
+  .nav-link{font-size:15px;}
+  .nav-sub-text{font-size: 12px; line-height: 2px;}
 }
 
 
