--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -307,11 +307,25 @@ footer span{color:#727272; padding:5px}
 
 
 /* Greet.html */
-#greet .img-feature{width:27%; height:600px; background:no-repeat 60% bottom scroll; background-size:cover; margin:auto;}
-#greet-content{width:67%; margin:10px auto;}
-#greet h2 {font-size:24px; font-weight: 500; color:#333333; text-align: center; margin:20px auto; letter-spacing: -2px;}
+#greet .img-feature{width:27%; height:550px; background:no-repeat 60% bottom scroll; background-size:cover; margin:auto;}
+#greet-content{width:67%; margin:2rem auto;}
+#greet h2 {font-size:24px; font-weight: 500; color:#333333; text-align: center; margin:30px auto; letter-spacing: -2px;}
 #greet h3{letter-spacing: -2px; margin-top:2.5rem; font-size:22px; line-height: 2.5rem;}
 #greet p{ text-align:justify; letter-spacing: -1px; font-size:16px;}
+
+.intro-effect:before{
+  content:'“';  position:relative;
+  top:25px; 
+  font-size:90px;  font-weight: 500; font-family: "Black Han Sans", sans-serif;
+  color:#0096BF; opacity:0.4;
+}
+.intro-effect:after{
+  content:'”';  position:relative;
+  top:60px;
+  font-size:90px;  font-weight: 500; font-family: "Black Han Sans", sans-serif;
+  color:#0096BF; opacity:0.4;
+}
+
 
 /* Work-list table */
 .work-list{margin:0 auto;}
@@ -344,18 +358,7 @@ footer span{color:#727272; padding:5px}
   padding:15px 20px;  margin:15px auto;
 }
 .business-intro p{line-height: 1.5rem;  font-weight: 300;  font-size:20px; text-align: center; letter-spacing: -1px; color:#6c757d; margin:0;}
-.intro-effect:before{
-  content:'“';  position:relative;
-  top:25px; 
-  font-size:90px;  font-weight: 500; font-family: "Black Han Sans", sans-serif;
-  color:#0096BF; opacity:0.4;
-}
-.intro-effect:after{
-  content:'”';  position:relative;
-  top:60px;
-  font-size:90px;  font-weight: 500; font-family: "Black Han Sans", sans-serif;
-  color:#0096BF; opacity:0.4;
-}
+
 .business-content{
   margin:0 auto;
   width:100%;
@@ -535,6 +538,25 @@ footer span{color:#727272; padding:5px}
 }
 
 /* min-width:100 - 최소 너비가 100일때까지 ~~ 한다. 너비가 100보다 클때 적용*/
+
+@media (min-width: 576px){ 
+  .main-content .container {
+    max-width: 760px;
+  }
+  .navbar .container{
+    max-width:768px;
+  }
+}
+
+@media (min-width: 768px){ 
+  .main-content .container {
+    max-width: 890px;
+  }
+  .navbar .container{
+    max-width:900px;
+  }
+}
+
 @media (min-width: 992px){ 
   .main-content .container {
     max-width: 810px;
@@ -542,7 +564,6 @@ footer span{color:#727272; padding:5px}
   .navbar .container{
     max-width:900px;
   }
-
 }
 @media (min-width: 1200px){ 
   .main-content .container {
@@ -577,17 +598,28 @@ footer span{color:#727272; padding:5px}
   .nav-link{font-size:1.2rem}
   .main-business h2{font-size: 36px;}
   .main-business h3{font-size: 14px;  letter-spacing: -1px;}
+  #greet h2{font-size: 24px;}
+  #greet h3{font-size: 20px;}
 }
 @media (max-width: 768px){
   .main-business h2{font-size: 32px;}
   .main-business h3{font-size: 12px;}
   .portfolio {margin-top:30px;}
+  #greet h2{font-size: 20px;}
+  #greet h3{font-size: 18px;}
 }
 @media (max-width: 576px){
   .main-business h2{font-size: 26px; margin-left:3rem;} 
   .main-business h3{font-size: 9px; letter-spacing: -1px; margin-left:.5rem;}
   .nav-link{font-size:15px;}
   .nav-sub-text{font-size: 12px; line-height: 2px;}
+  #greet h2{font-size: 16px;}
+  #greet h3{font-size: 14px; margin:.5rem auto; line-height: 1.5rem;}
+  #greet p{font-size: 10px; margin:.5rem auto; line-height: 1.5rem;}
+  
+  #greet .intro-effect:after{top:40px; font-size:56px;}
+  #greet .intro-effect:before{top:15px; font-size:56px;}
+  #greet-content{margin:1rem auto;}
 }
 
 
