--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -401,19 +401,8 @@ footer span{color:#727272; padding:5px}
   height:18px;
   background: #0096BF;
 }
-.business-content .sub-tit{letter-spacing: -1px;}
+.business-content .sub-tit{letter-spacing: -1px;   margin-top:40px; font-size:25px; font-weight: 700; line-height: 1.75rem;}
 
-/* Not used
-.business-content h2{
-  text-align: center;
-  color:#4169e1;
-  margin-top:40px; margin-bottom:40px;
-  font-size:28px;  font-weight: 700;
-}*/
-.business-content h3{
-  margin-top:40px;
-  font-size:25px; font-weight: 700;
-}
 .business-content h4{
   font-size:21px;
   font-weight: 400;
@@ -427,6 +416,8 @@ footer span{color:#727272; padding:5px}
 .business-content .list{
   width:100%;
   margin:20px auto;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .business-content .list dl{
@@ -458,12 +449,15 @@ footer span{color:#727272; padding:5px}
   font-weight:500;overflow:hidden;padding:10px 8px;}
 
 
-#process{
+.process{
   display:flex;
   overflow: auto;
+  -ms-overflow-style: none;
 }
 
-.circle-list { margin:0 auto; 
+.process::-webkit-scrollbar{ display:none; }
+
+.circle-list { margin:0 auto;
   display:table;  vertical-align: middle; text-align: center;}
 .circle-list li{
   position:relative;
@@ -472,12 +466,12 @@ footer span{color:#727272; padding:5px}
   display:table-cell;
   vertical-align: middle;
   height:150px;
-  width: 150px;
   min-width: 150px;
   border-radius: 75px;
   border: 2px solid #00A4D1;
   margin:auto;
   text-align: center;
+  font-size:16px;
 }
 .circle-list li:before{
   font-family: 'Audiowide', cursive;
@@ -487,13 +481,11 @@ footer span{color:#727272; padding:5px}
   content:'>';
   position:absolute;
   left:-30px;
-  top:40px;
+  top:44px;
   display: block;  
 }
 .circle-list li:first-child:before{content:"";}
-#bus3 .circle-list{border-spacing:30px;}
-#bus4 .circle-list{border-spacing: 50px;}
-#bus4 .circle-list li:before{left:-40px}
+.circle-list{border-spacing:30px;}
 
 /* Sub menu button */
 /*
@@ -513,6 +505,7 @@ footer span{color:#727272; padding:5px}
 .sub-menu-btn.col3 div{ width:33%;}
 .sub-menu-btn.col4 div{ width:25%;}
 .sub-menu-btn.col2 div{width:49.5%;}
+
 .sub-menu-btn a{
   color:grey;
   margin:0 auto;
@@ -541,59 +534,11 @@ footer span{color:#727272; padding:5px}
   justify-content: space-between;
 }
 
-/* min-width:100 - 최소 너비가 100일때까지 ~~ 한다. 너비가 100보다 클때 적용*/
-
-/*
-@media (min-width: 576px){ 
-  .main-content .container {
-    max-width: 760px;
-  }
-  .navbar .container{
-    max-width:768px;
-  }
-}
-
-@media (min-width: 768px){ 
-  .main-content .container {
-    max-width: 890px;
-  }
-  .navbar .container{
-    max-width:900px;
-  }
-}
-
-@media (min-width: 992px){ 
-  .main-content .container {
-    max-width: 810px;
-  }
-  .navbar .container{
-    max-width:1200px;
-  }
-}
-@media (min-width: 1200px){ 
-  .main-content .container {
-    max-width: 990px;
-  }
-  .navbar .container{
-    max-width:1400px;
-  }
-}
-
-@media (min-width: 1400px){ 
-  .main-content .container {
-    max-width: 1140px;
-  }
-  .navbar .container{
-    max-width:1400px;
-  }
-}
-*/
-
 @media (max-width: 1200px){
   .nav-link{font-size:20px;}
   .main-business h2{font-size: 46px;}
   .main-business h3{font-size: 16px; letter-spacing: -1px;}
-  .sub-menu-btn{font-size: 20px;}
+  .sub-menu-btn a{font-size: 20px;}
 }
 
 @media (max-width: 992px){ 
@@ -611,6 +556,7 @@ footer span{color:#727272; padding:5px}
   .top-area .top-text p{width:100%; display:block; right:0; text-align:center;}
   
   .list-group-item{text-align: center; padding: .75rem 1.25rem;}
+  .sub-menu-btn a{font-size: 18px;}
 }
 @media (max-width: 768px){
   .main-business h2{font-size: 32px;}
@@ -623,7 +569,7 @@ footer span{color:#727272; padding:5px}
 @media (max-width: 576px){
   .main-content .container{padding:20px;}
   .main-content .title-bar h1{font-size:28px; margin-bottom: .5rem;}
-  .main-content .breadcrumb{font-size:12px;}
+  .main-content .breadcrumb{display:none;}
   .main-business h2{font-size: 26px; margin-left:3rem;} 
   .main-business h3{font-size: 9px; letter-spacing: -1px; margin-left:.5rem;}
   .nav-link{font-size:15px;}
@@ -641,6 +587,23 @@ footer span{color:#727272; padding:5px}
   #history .history-year{padding:8px; font-size:20px} 
   #history .history-events{padding:3px; font-size:10px; }
   #history .history-content{margin-left:2em;}
+
+  .sub-menu-btn a{font-size: 14px; font-weight: 400;}
+  .sub-menu-btn.col4 div{height: 80px;}
+
+  .business-content .sub-tit{font-size:18px; font-weight:400;}
+  .business-content p{font-size:13px; font-weight:400; line-height: 1rem;}
+  .business-content img{width:90%; margin-bottom:1rem; margin-right: auto;}
+  .business-content .list dl{width:45%;}
+  .business-content .list dt{font-size:16px;}
+  .business-content .list dd{font-size:13px;}
+
+  .circle-list{border-spacing: 20px;}
+  .circle-list li{height:80px; min-width: 80px; font-size: 10px;}
+  .circle-list li:before{left:-20px; top:15px; font-size:30px;}
+
+  .normal-tb th{font-size:12px;}
+  .normal-tb td{font-size:10px;}
 
 }
 
